--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>After Class</h1>
+    <div>
+      <ul>
+        <li>Nicolás Posa</li>
+      </ul>
+    </div>
   </body>
 </html>
